--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -11,7 +11,7 @@
       <th><%= model_class.human_attribute_name(:inteviewer_name) %></th>
       <th><%= model_class.human_attribute_name(:interview_date) %></th>
       <th><%= model_class.human_attribute_name(:interview_status) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <!-- <th><#%= model_class.human_attribute_name(:created_at) %></th> -->
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -24,7 +24,7 @@
         <td><%= interview.inteviewer_name %></td>
         <td><%= interview.interview_date %></td>
         <td><%= interview.interview_status %></td>
-        <td><%=l interview.created_at %></td>
+        <!-- <td><#%=l interview.created_at %></td> -->
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_interview_path(interview), :class => 'btn btn-mini' %>
