--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,3 +1,7 @@
+<h3>Welcome <%= current_user.email %> </h3>
+
+<%= link_to 'Sign out', destroy_user_session_path , :method => :delete %>
+
 <%- model_class = Interview -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
