--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,11 +1,16 @@
-<h3>Welcome <%= current_user.email %> </h3>
-
-<%= link_to 'Sign out', destroy_user_session_path , :method => :delete %>
-
 <%- model_class = Interview -%>
+
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
+
+<%= form_tag interviews_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -26,7 +31,7 @@
         <td><%= interview.candidate_name %></td>
         <td><%= interview.total_exp %></td>
         <td><%= interview.inteviewer_name %></td>
-        <td><%= interview.interview_date %></td>
+        <td><%= interview.interview_date.strftime("%d %b %Y") %></td>
         <td><%= interview.interview_status %></td>
         <!-- <td><#%=l interview.created_at %></td> -->
         <td>
